    selinux-fedora/vbox_x11.pp which is stripped by the dfsg-free target.
  * Update install files.
  * Add 29-fix-ftbfs-as-needed.patch to fix FTBFS with ld --as-needed.
  * Automatically generate the pixmap icon from png.
  * Fix the watch file.
  * Update man pages.
  * Support passing through USB 1.1 devices to virtual machines.

 -- Felix Geyer <debfx-pkg@fobos.de>  Sat, 22 Jan 2011 11:56:03 +0100

virtualbox-ose (3.2.12-dfsg-1) unstable; urgency=low

  * New upstream release.
  * Drop 03-2.6.37.patch and 24-xserver-19-support.patch, applied upstream.

 -- Felix Geyer <debfx-pkg@fobos.de>  Thu, 02 Dec 2010 21:18:36 +0100

virtualbox-ose (3.2.10-dfsg-2) unstable; urgency=low

  * Added two patches from virtualbox-ose SVN/bug tracking to fix some
    issues with kernels > 2.6.36. (Closes: #604259)
  * Moved program to utilities where it belongs.
  * Fixed typo in desktop file

 -- Michael Meskes <meskes@debian.org>  Mon, 22 Nov 2010 12:28:19 +0100

virtualbox-ose (3.2.10-dfsg-1) unstable; urgency=low

  * New upstream release.
  * Adapt 18-system-xorg.patch and 27-hide-host-cache-warning.patch for
    new upstream version.
  * Drop 25-vboxnetadp_kernel_2.6.36.patch and 26-vboxsf_kernel_2.6.36.patch,
    applied upstream.
  * Drop lpia from the architectures as Ubuntu doesn't support it anymore and
    Debian never has.

 -- Felix Geyer <debfx-pkg@fobos.de>  Tue, 12 Oct 2010 23:54:04 +0200

virtualbox-ose (3.2.8-dfsg-2) unstable; urgency=high

  * Fix FTBFS with recent libdrm-dev versions. (Closes: #594599)
  * Make the kernel modules buildable with kernel 2.6.36.
    (Closes: #594602; LP: #619497)
    - Add 25-vboxnetadp_kernel_2.6.36.patch
    - Add 26-vboxsf_kernel_2.6.36.patch
  * Silently enable the host I/O cache when the image is on an ext4/XFS
    partition. No need to warn users about it. (Closes: #595050)
    - Add 27-hide-host-cache-warning.patch
  * Recompiled to fix incorrectly generated dependencies. (Closes: #595715)