@@ -1,1 +1,1 @@
-#out/vdfuse/vdfuse usr/bin
+out/vdfuse/vdfuse usr/bin
